--- a/Flapbird/MainPage.xaml
+++ b/Flapbird/MainPage.xaml
@@ -1,36 +1,59 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Flapbird.MainPage">
+             x:Class="Flapbird.MainPage"
+             Shell.NavBarIsVisible="False ">
+    <Grid>
+        <Image Source="background.png"
+               Opacity=".5"
+               Aspect="AspectFill"
+               HorizontalOptions="Fill"
+               VerticalOptions="Fill"/>
+        <Image Source="canobaixo.png"
+               x:Name="imgcanobaixo"
+               HeightRequest="300"
+               WidthRequest="100"
+               Aspect="AspectFit"
+               HorizontalOptions="End"
+               VerticalOptions="Start"/>
+        <Image Source="canocima.png"
+               x:Name="imgcanocima"
+               HeightRequest="300"
+               WidthRequest="100"
+               Aspect="AspectFit"
+               HorizontalOptions="End"
+               VerticalOptions="End"/>
+        <Image Source="bird.png"
+               x:Name="Passaro"
+               HeightRequest="100"
+               WidthRequest="80"
+               Margin="30,0,0,0"
+               HorizontalOptions="Start"
+               VerticalOptions="Center"/>
+        <Image Source="chao.png"
+               x:Name="chao"
+               HeightRequest="90"
+               Aspect="AspectFill"
+               HorizontalOptions="Center"
+               VerticalOptions="End"/>
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+        <Frame
+            IsVisible="true"
+            x:Name="FrameGameOver"
+            BackgroundColor="#99000000"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill"
+            CornerRadius="0">
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Tapped="Oi"/>
+            </Frame.GestureRecognizers>
+            <Image Source="iniciar.png"
+                   HeightRequest="195"
+                   WidthRequest="160"/>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+        </Frame>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
 
+    </Grid>
 </ContentPage>
