--- a/Flapbird/MainPage.xaml
+++ b/Flapbird/MainPage.xaml
@@ -3,57 +3,74 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Flapbird.MainPage"
              Shell.NavBarIsVisible="False ">
-    <Grid>
-        <Image Source="background.png"
-               Opacity=".5"
-               Aspect="AspectFill"
-               HorizontalOptions="Fill"
-               VerticalOptions="Fill"/>
-        <Image Source="canobaixo.png"
-               x:Name="imgcanobaixo"
-               HeightRequest="300"
-               WidthRequest="100"
-               Aspect="AspectFit"
-               HorizontalOptions="End"
-               VerticalOptions="Start"/>
-        <Image Source="canocima.png"
-               x:Name="imgcanocima"
-               HeightRequest="300"
-               WidthRequest="100"
-               Aspect="AspectFit"
-               HorizontalOptions="End"
-               VerticalOptions="End"/>
-        <Image Source="bird.png"
-               x:Name="Passaro"
-               HeightRequest="100"
-               WidthRequest="80"
-               Margin="30,0,0,0"
-               HorizontalOptions="Start"
-               VerticalOptions="Center"/>
-        <Image Source="chao.png"
-               x:Name="chao"
-               HeightRequest="90"
-               Aspect="AspectFill"
-               HorizontalOptions="Center"
-               VerticalOptions="End"/>
+       <Grid>
+              <Grid.GestureRecognizers>
+                     <TapGestureRecognizer Tapped="OnGridClicked"/>
+              </Grid.GestureRecognizers>
 
-        <Frame
-            IsVisible="true"
-            x:Name="FrameGameOver"
-            BackgroundColor="#99000000"
-            HorizontalOptions="Fill"
-            VerticalOptions="Fill"
-            CornerRadius="0">
+              <Image Source="background.png"
+                     Opacity=".5"
+                     Aspect="AspectFill"
+                     HorizontalOptions="Fill"
+                     VerticalOptions="Fill"/>
+              <Image Source="canocima.jpg"
+                     x:Name="imgcanocima"
+                     HeightRequest="620"
+                     WidthRequest="30"
+                     Aspect="AspectFit"
+                     HorizontalOptions="End"
+                     VerticalOptions="Start"/>
+              <Image Source="canobaixo.jpg"
+                     x:Name="imgcanobaixo"
+                     HeightRequest="620"
+                     WidthRequest="0"
+                     Aspect="AspectFit"
+                     HorizontalOptions="End"
+                     VerticalOptions="End"/>
+              <Image Source="passaro.png"
+                     x:Name="Passaro"
+                     HeightRequest="110"
+                     WidthRequest="80"
+                     Margin="30,0,0,0"
+                     HorizontalOptions="Start"
+                     VerticalOptions="Center"/>
+              <Image Source="chao.jpg"
+                     x:Name="chao"
+                     HeightRequest="90"
+                     Aspect="AspectFill"
+                     HorizontalOptions="Center"
+                     VerticalOptions="End"/>
 
-            <Frame.GestureRecognizers>
-                <TapGestureRecognizer Tapped="Oi"/>
-            </Frame.GestureRecognizers>
-            <Image Source="iniciar.png"
-                   HeightRequest="195"
-                   WidthRequest="160"/>
+              <Frame IsVisible="true"
+                     x:Name="FrameGameOver"
+                     BackgroundColor="#99000000"
+                     HorizontalOptions="Fill"
+                     VerticalOptions="Fill"
+                     CornerRadius="0">
 
-        </Frame>
+                     <Frame.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="Oi"/>
+                     </Frame.GestureRecognizers>
+                     <Grid>
+                            <Grid.RowDefinitions>
+                                   <RowDefinition Height="*"/>
+                                   <RowDefinition Height="*"/>
+                                   <RowDefinition Height="*"/>
+                                   <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Image Source="birdjump.png"
+                                   HeightRequest="500"
+                                   WidthRequest="250"
+                                   Grid.Row="1"/>
+                            <Image Source="taptojump.png"
+                                   HeightRequest="200"
+                                   WidthRequest="165"
+                                   Grid.Row="2"/>
+
+                     </Grid>
+
+              </Frame>
 
 
-    </Grid>
+       </Grid>
 </ContentPage>
